--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "properpcb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "run": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
