--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/bryzaguy/properpcb",
   "dependencies": {
     "express": "^4.12.3"
+  },
+  "devDependencies": {
+    "jsx-loader": "^0.13.2",
+    "webpack": "^1.8.11"
   }
 }
