--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "express": "^4.12.3"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^1.2.0",
+    "css-loader": "^0.12.0",
     "jsx-loader": "^0.13.2",
+    "node-sass": "^2.1.1",
+    "sass-loader": "^0.6.0",
+    "style-loader": "^0.12.1",
     "webpack": "^1.8.11"
   }
 }
