--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/bryzaguy/properpcb",
   "dependencies": {
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "react": "^0.13.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
