--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "run": "node server",
+    "start": "node server",
+    "watch": "webpack -watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,15 +20,17 @@
   "homepage": "https://github.com/bryzaguy/properpcb",
   "dependencies": {
     "express": "^4.12.3",
+    "jquery": "^2.1.4",
+    "mongodb": "^2.0.31",
     "react": "^0.13.2",
-    "jquery": "^2.1.4"
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
+    "node-sass": "^3.0.0",
+    "sass-loader": "^0.4.2",
     "css-loader": "^0.12.0",
     "jsx-loader": "^0.13.2",
-    "node-sass": "^2.1.1",
-    "sass-loader": "^0.6.0",
     "style-loader": "^0.12.1",
     "webpack": "^1.8.11"
   }
